# openai-compatible-api

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/curl/: chat_example.sh
examples/go/: main.go
examples/java/: ChatApiExample.java
examples/javascript/: chat_example.js
examples/php/: chat_example.php
examples/python/: chat_example.py
src/: index.d.ts  index.js
src/mountsea_openai/: __init__.py  client.py
