[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mountsea-openai"
version = "1.0.0"
description = "Python SDK for OpenAI-compatible API - Access GPT-4, Claude, Gemini with one API via Mountsea AI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Mountsea AI", email = "support@mountsea.ai"}]
keywords = [
    "openai", "openai-api", "openai-compatible", "gpt-4", "gpt4",
    "claude", "gemini", "llm", "chat", "ai",
    "mountsea", "mountsea-ai", "chatgpt-api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://shanhaiapi.com/zh/"
Documentation = "https://docs.mountsea.ai/api-reference/chat/introduction"
Repository = "https://github.com/mountsea-ai/openai-compatible-api"

[tool.setuptools.packages.find]
where = ["src"]

